--- a/Alacritty/alacritty.toml
+++ b/Alacritty/alacritty.toml
@@ -1,2 +1,25 @@
+import = [
+    "~/.config/alacritty/themes/themes/tomorrow_night_bright.toml"
+]
+
 [font]
 size = 14.0
+
+[selection]
+save_to_clipboard = true
+
+[window]
+# decorations = "full"
+decorations_theme_variant = "Dark"
+dynamic_title = true
+# opacity = 0.85
+startup_mode = "Maximized"
+
+[scrolling]
+history = 10000
+
+[keyboard]
+bindings = [
+  { key = "Right", mods = "Alt", chars = "\u001BF" },
+  { key = "Left",  mods = "Alt", chars = "\u001BB" },
+]
